--- a/Index.html
+++ b/Index.html
@@ -17,11 +17,11 @@
             </div>
 
             <img class="info-logo" src="/img/Information logo.png" alt="information logo">
-            <button class="header-button header-login">Log in</button><img src="/img/person-svgrepo-com.svg" alt="Login" class="header-icons header-login">
+            <button class="header-button header-login header-login_button">Log in</button><img src="/img/person-svgrepo-com.svg" alt="Login" class="header-icons header-login header-loginIMG">
         </nav>
     </header>
 
-    <nav>
+    <nav class="navigation-atags">
         <a href="Nyhedsbrev">Nyhedsbrev</a>
         <a href="Podcast">Podcast</a>
         <a href="Abonnement">Køb Abonnement</a>
