First article classes and css placement

--- a/Index.html
+++ b/Index.html
@@ -27,10 +27,10 @@
         <a href="Abonnement">Køb Abonnement</a>
     </nav>
 
-    <div>
-        <img src="https://cataas.com/cat/gif" alt=""> 
+    <div class="Annonce-box">
+        <img src="https://cataas.com/cat/gif" class="Annonce" alt=""> 
 
-        <aside>
+        <aside class="text-annonce">
             <p>Annonce</p>
         </aside>
 
@@ -38,15 +38,15 @@
 
     <main>
 
-        <div>
-            <aside> 
+        <div class="First-article">
+            <aside class="first-articleSidetext"> 
                 Rusland vil ikke bruge gasrørledningen,
                 Nord Stream 2, som politisk våben, lyder 
                 det fra folkene bag projektet,
                 Rørledningen koster 70 mia. kr. og vil
                 sende 55 mia. kubikmeter gas ind i Europa
                                                 om året.
-                <img src="/img/camera.svg" alt=""><p>Peter Nygaard Christensen</p>
+                <img src="/img/camera.svg" alt="fotograf" class="small-icons"><p>Peter Nygaard Christensen</p>
             </aside>
 
             <article>
@@ -58,7 +58,7 @@
                 EU, der bruger gassen som våben over Putin. Information har været på charmetur
                 med den russiske gas' europæiske venner
                 </p>
-                <img src=https://placehold.jp/3d4070/ffffff/800x800.png alt="">
+                <img src=https://placehold.jp/3d4070/ffffff/800x800.png class="first-articleimg" alt="">
             </article>
         </div>
 
