read more article is done getting postioned

--- a/Index.html
+++ b/Index.html
@@ -70,7 +70,7 @@
 
         <div class="readmore">
 
-            <aside>
+            <aside class="socials-aside">
                 <img src="/img/person-svgrepo-com.svg" class="readmore-img" alt="">
                 <p>Jakob Stein</p>
                 <a href="#"><img src="/img/email-circle-svgrepo-com.svg" class="readmore-img" alt="">Email</a>
@@ -90,14 +90,14 @@
                 dansk farvand
             </p>
 
-            <p class="readmore-text2">
+            <p  class="readmore-text2">
                 På bussens bagsæde udvikler den 'uformelle dialog' sig hurtigt til et 20 minutters forsvar
                 for den 12.000 kilometer lange rørledning der sidste år blev viklet ind i det stadigt mere
             </p>
 
             </div>
 
-            <div>
+            <div class="social-buttons">
                 <button class="socialmedia-button facebook" type="button">
                     <img src="/img/facebook-box-svgrepo-com.svg" class="socialmedia-buttonimg" alt="">DEL
                 </button>
@@ -123,10 +123,10 @@
 
         <section>
 
-            <div>
-                <h2>Fik du læst?<img src="/img/compass-svgrepo-com.svg" alt=""></h2>
-                <button><img src="/img/arrow-circle-left-svgrepo-com.svg" alt=""></button> 
-                <button><img src="/img/arrow-circle-right-svgrepo-com.svg" alt=""></button>
+            <div class="didyouread">
+                <h2>Fik du læst?<img src="/img/compass-svgrepo-com.svg" class="didyouread-img" alt=""></h2>
+                <button class="arrow-left"><img src="/img/arrow-circle-left-svgrepo-com.svg" class="didyouread-img" alt=""></button> 
+                <button class="arrow-right"><img src="/img/arrow-circle-right-svgrepo-com.svg" class="didyouread-img" alt=""></button>
             </div>
 
             <article>
