started on the, 4 grid article

--- a/Index.html
+++ b/Index.html
@@ -122,15 +122,14 @@
     </main>
 
         <section>
-
             <div class="didyouread">
                 <h2>Fik du læst?<img src="/img/compass-svgrepo-com.svg" class="didyouread-img" alt=""></h2>
                 <button class="arrow-left"><img src="/img/arrow-circle-left-svgrepo-com.svg" class="didyouread-img" alt=""></button> 
                 <button class="arrow-right"><img src="/img/arrow-circle-right-svgrepo-com.svg" class="didyouread-img" alt=""></button>
             </div>
 
-            <article>
-                <div>
+            <article class="four-articlegrid">
+                <div class="fournewsarticles">
                     <img src="https://placehold.jp/3d4070/ffffff/400x400.png" alt="">
                     <h3>
                         Alternativ forbrødning, eller
@@ -139,7 +138,7 @@
                     </h3>
                 </div>
 
-                <div>
+                <div class="fournewsarticles">
                     <img src="https://placehold.jp/7b2418/ff45ff/400x400.png" alt="">
                     <h3>
                         ≫Jeg måtte ud på det dybe 
@@ -148,7 +147,7 @@
                     </h3>
                 </div>
 
-                <div>
+                <div class="fournewsarticles">
                     <img src="https://placehold.jp/3d3033/ffff55/400x400.png" alt="">
                     <h3>
                         Ice age lever stadig op til den 
@@ -158,7 +157,7 @@
                     </h3>
                 </div>
 
-                <div>
+                <div class="fournewsarticles">
                     <img src="https://placehold.jp/34c215/ffffff/400x400.png" alt="">
                     <h2>
                         Under normale forhold ville
