nearly done fixing max width so content stays within frame

--- a/Index.html
+++ b/Index.html
@@ -169,12 +169,12 @@
             </article>
         </section>
 
-        <div>
+        <div class="latest-news">
             <p>Seneste nyt</p>
             <p>Information.dk</p>
         </div>
 
-        <aside>
+        <aside class="latestnews-articles">
             <ul>
                 <li>
                     <p>
@@ -236,11 +236,11 @@
             </ul>
         </aside>
 
-        <div class="grid">
-            <img src="/img/home-4-svgrepo-com.svg" alt="hjem"><p>Forsiden lige nu</p>
+        <div class="lastestnews-flexbox">
+            <img src="/img/home-4-svgrepo-com.svg" class="header-icons grid-head" alt="hjem"><p class="grid-head">Forsiden lige nu</p>
 
-            <article>
-                <img src="https://placehold.jp/10059f/ffffff/400x400.png" alt="Fornemt bordselvskab">
+            <article class="article1">
+                <img src="https://placehold.jp/10059f/ffffff/400x400.png" class="latestnews-articleimg" alt="Fornemt bordselvskab">
                 <h3>
                     Gas er et godt politisk våben. 
                     Det er bare ikke Putin, der 
@@ -248,14 +248,14 @@
                 </h3>
             </article>
 
-            <article>
-                <img src="https://placehold.jp/5709b2/ffffff/400x400.png" alt="">
+            <article class="article2">
+                <img src="https://placehold.jp/5709b2/ffffff/400x400.png" class="latestnews-articleimg" alt="">
                 <h3>
                     Mand dig op, kvinde!
                 </h3>
             </article>
 
-            <article>
+            <article class="article3">
                 <h3>
                     Peter Madsen anker kun
                     længden af sin straf     
@@ -268,11 +268,11 @@
 
             </article>
 
-            <article>
+            <article class="article4">
                 <p>
                     ABONNEMENT
                 </p>
-                <img src="https://placehold.jp/34c215/ffffff/400x400.png" alt="">
+                <img src="https://placehold.jp/34c215/ffffff/400x400.png" class="latestnews-articleimg" alt="">
                 <h3>
                     Rapport fra norsk
                     regeringskommission skaber
@@ -281,7 +281,7 @@
                 </h3>
             </article>
 
-            <article>
+            <article class="article5">
                 <p>
                     ABONNEMENT
                 </p>
@@ -303,9 +303,9 @@
                 </p>
             </article>
 
-            <article>
+            <article class="article6">
                 <p>ABONNEMENT</p>
-                <img src="https://placehold.jp/34c215/ffffff/400x400.png" alt="">
+                <img src="https://placehold.jp/34c215/ffffff/400x400.png" class="latestnews-articleimg" alt="">
                 <h3>
                     440.000 syrere er vendt
                     tilbage, selv om krigen
@@ -315,20 +315,20 @@
             </article>
         </div>
 
-        <div>
-            <div>
-                <p>Anbefalinger</p>
-                <p>Kommentarer</p>
+        <div class="comments-grid">
+            <div class="head-comments">
+                <p class="header-comments">Anbefalinger</p>
+                <p class="header-comments">Kommentarer</p>
             </div>
 
-            <aside>
+            <aside class="suggest-article">
                 <p>
                     Anbefal artikel
                 </p>
             </aside>
             <div class="comments-top">
                 <div class="comments-henrik">
-                    <img src="/img/person-svgrepo-com.svg" alt="">
+                    <img src="/img/person-svgrepo-com.svg" class="comment-icons" alt="">
                     <p>
                         Henrik holm hansen
                     </p>
@@ -351,7 +351,7 @@
             </div>
             <div class="comments-bottom">
                 <div class="comments-Gert">
-                    <img src="/img/person-svgrepo-com.svg" alt="">
+                    <img src="/img/person-svgrepo-com.svg" class="comment-icons" alt="">
                     <p>
                         Gert Romme
                     </p>
@@ -386,7 +386,7 @@
                         Anbefal kommentar
                     </p>
 
-                    <p>
+                    <p class="comment-loginSignup">
                         Du skal være registreret bruger for at kommentere. <a href="#">Log in</a> eller <a href="#">opret bruger</a><span>≫</span>
                     </p>
                 </div>
@@ -395,7 +395,7 @@
         <footer>
 
             <div class="footer-grid">
-                <div>
+                <div class="footer-gridspace">
                     <p>
                         Information som E-avis
                     </p>
@@ -404,24 +404,24 @@
                         På din mobil, tablet eller computer - og
                         helt ude i skoven
                     </p>
-                    <img src="/img/pc-display-2-svgrepo-com.svg" alt=""><a href="#">Læs e-avisen på din computer</a>
-                    <img src="/img/apple-173-svgrepo-com.svg" alt=""><a href="#">Download til Apple</a>
-                    <img src="/img/android-svgrepo-com.svg" alt=""><a href="#">Download til android</a>
+                    <img src="/img/pc-display-2-svgrepo-com.svg" class="footer-icons" alt=""><a href="#">Læs e-avisen på din computer</a>
+                    <img src="/img/apple-173-svgrepo-com.svg" class="footer-icons" alt=""><a href="#">Download til Apple</a>
+                    <img src="/img/android-svgrepo-com.svg" class="footer-icons" alt=""><a href="#">Download til android</a>
 
                     <p>
                         Følg avisen
                     </p>
                     
-                    <img src="/img/mail-alt-svgrepo-com.svg" alt=""><a href="#">Nyhedsbrev</a>
-                    <img src="/img/facebook-svgrepo-com.svg" alt=""><a href="#">Facebook</a>
-                    <img src="/img/twitter-154-svgrepo-com.svg" alt=""><a href="#">Twitter</a>
-                    <img src="/img/wifi-signal-svgrepo-com.svg" alt=""><a href="#">RSS</a>
+                    <img src="/img/mail-alt-svgrepo-com.svg" class="footer-icons" alt=""><a href="#">Nyhedsbrev</a>
+                    <img src="/img/facebook-svgrepo-com.svg" class="footer-icons" alt=""><a href="#">Facebook</a>
+                    <img src="/img/twitter-154-svgrepo-com.svg" class="footer-icons" alt=""><a href="#">Twitter</a>
+                    <img src="/img/wifi-signal-svgrepo-com.svg" class="footer-icons" alt=""><a href="#">RSS</a>
                 </div>
 
-                <div>
-                    <img src="https://placehold.jp/769b15/ffffff/400x400.png" alt="">
+                <div class="footer-gridspace">
+                    <img src="https://placehold.jp/769b15/ffffff/400x400.png" class="footer-article" alt="">
                 </div>
-                <div>
+                <div class="form-gridspace">
                     <p>
                         information hver morgen
                     </p>
@@ -439,7 +439,7 @@
                         <a href="#">Information i løssalg</a>
                         <a href="#">Hjælp til information.dk</a> 
                 </div>
-                <div>
+                <div class="footer-infogridspace">
                     <p>
                         Om Information
                     </p>
@@ -453,7 +453,7 @@
 
                     <a href="#">Hosted hos Sentia</a>
                 </div>
-                <div>
+                <div class="contact-info">
                     <p>
                         Ansvarshavende chefredaktør: Rune Lykkeberg | Dagbaldet Information, Store Kongensgade 40C, 1264 København. Telefon: 3369 6000 CVR: 63058416
                         <a href="#">Privatlivspolitik</a> | <a href="#"> Cookies </a> | <a href="#">Annoncering</a>
