Nearly done with css

--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,7 @@
             </aside>
 
             <article>
-                <p class="first-articlePtag">Abonnement LÆSETID: 7 MIN.</p>
+                <p class="first-articlePtag red-text-firstline">Abonnement LÆSETID: 7 MIN.</p>
                 <h2>Gas er et godt politisk våben. Det er bare ikke Putin, der bruger det</h2>
                 <p class="first-articlePtag">
                 Nogle EU-lande frygter, at Rusland kan bruge Nord Stream 2 som politisk våben mod 
@@ -269,7 +269,7 @@
             </article>
 
             <article class="article4">
-                <p>
+                <p class="red-text">
                     ABONNEMENT
                 </p>
                 <img src="https://placehold.jp/34c215/ffffff/400x400.png" class="latestnews-articleimg" alt="">
@@ -282,7 +282,7 @@
             </article>
 
             <article class="article5">
-                <p>
+                <p class="red-text">
                     ABONNEMENT
                 </p>
                 <h3>
@@ -304,7 +304,7 @@
             </article>
 
             <article class="article6">
-                <p>ABONNEMENT</p>
+                <p class="red-text">ABONNEMENT</p>
                 <img src="https://placehold.jp/34c215/ffffff/400x400.png" class="latestnews-articleimg" alt="">
                 <h3>
                     440.000 syrere er vendt
